--- a/project/union-booth/package.json
+++ b/project/union-booth/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "helmet": "^4.2.0",
     "polka": "next",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "sapper": "^0.28.0",
