--- a/project/union-booth/package.json
+++ b/project/union-booth/package.json
@@ -9,6 +9,8 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.1",
     "helmet": "^4.2.0",
     "polka": "next",
