--- a/project/union-booth/package.json
+++ b/project/union-booth/package.json
@@ -12,9 +12,11 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.1",
+    "dompurify": "^2.2.6",
     "dotenv": "^8.2.0",
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
+    "marked": "^1.2.7",
     "polka": "next",
     "session-file-store": "^1.5.0",
     "sirv": "^1.0.0",
